# mapky-indexer

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  justfile
config/: config.example.toml
docker/: .env-sample  docker-compose.yml
mapky-common/: Cargo.toml
mapky-common/src/: lib.rs  stack.rs  types.rs  utils.rs
mapky-common/src/config/: api.rs  daemon.rs  db.rs  loader.rs  mod.rs  watcher.rs
mapky-common/src/db/: errors.rs  mod.rs
mapky-common/src/db/connectors/: mod.rs  neo4j.rs  nominatim.rs  postgres.rs  pubky.rs
mapky-common/src/db/graph/: exec.rs  setup.rs
mapky-common/src/db/graph/queries/: del.rs  get.rs  put.rs
mapky-common/src/db/pg/queries/: cursor.rs  mod.rs  place.rs  post.rs
mapky-common/src/models/: homeserver.rs  mod.rs  place.rs  post.rs  user.rs
mapky-watcher/: Cargo.toml
mapky-watcher/src/: builder.rs  lib.rs
mapky-watcher/src/events/: mod.rs
mapky-watcher/src/events/handlers/: post.rs
mapky-watcher/src/service/: mod.rs
mapky-webapi/: Cargo.toml
mapky-webapi/src/: builder.rs  error.rs  lib.rs
mapky-webapi/src/routes/: mod.rs
mapky-webapi/src/routes/v0/: health.rs  ingest.rs  mod.rs  place.rs  viewport.rs
mapky-webapi/tests/: integration.rs
mapky-webapi/tests/common/: mod.rs
mapkyd/: Cargo.toml
mapkyd/examples/: seed.rs  write_testnet.rs
mapkyd/src/: cli.rs  launcher.rs  lib.rs  main.rs  reset.rs
migrations/: 20260315000001_initial.sql  20260315000002_cursor_source_id.sql
