[package]
name = "mapky-watcher"
version = "0.1.0"
edition = "2021"
description = "Mapky event watcher — processes homeserver events into Neo4j + PostgreSQL"
license = "MIT"

[dependencies]
mapky-common = { version = "0.1.0", path = "../mapky-common" }
mapky-app-specs = { workspace = true }
pubky = { workspace = true }
chrono = { workspace = true }
neo4rs = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
