[package]
name = "mapkyd"
version = "0.1.0"
edition = "2021"
description = "Mapky daemon — CLI for running the API and watcher services"
license = "MIT"

[dependencies]
mapky-common = { version = "0.1.0", path = "../mapky-common" }
mapky-watcher = { version = "0.1.0", path = "../mapky-watcher" }
mapky-webapi = { version = "0.1.0", path = "../mapky-webapi" }
clap = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
