[package]
name = "mapkyd"
version = "0.1.0"
edition = "2021"
description = "Mapky daemon — CLI for running the API and watcher services"
license = "MIT"

[dependencies]
mapky-common = { version = "0.1.0", path = "../mapky-common" }
mapky-watcher = { version = "0.1.0", path = "../mapky-watcher" }
mapky-webapi = { version = "0.1.0", path = "../mapky-webapi" }
chrono = { workspace = true }
clap = { workspace = true }
neo4rs = { workspace = true }
serde = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[[example]]
name = "seed"
path = "examples/seed.rs"
